--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -10,6 +10,15 @@
 
     <title>Obsidian Programming Language</title>
     
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-131149884-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+        gtag('config', 'UA-131149884-1');
+    </script>
+    
     <style>
         body { padding-top: 70px; }
         
