fix syntax error in the template

--- a/Obsidian_Runtime/src/main/yul_templates/object.mustache
+++ b/Obsidian_Runtime/src/main/yul_templates/object.mustache
@@ -2,8 +2,8 @@ object "{{creationObject}}" {
     code {
         {{memoryInit}}
         {{callValueCheck}}
-        {{?notLibrary}}
-        {{?constructorHasParams}} let {{constructorParams}} := {{copyConstructorArguments}}() {{/constructorHasParams}}
+        {{#notLibrary}}
+        {{#constructorHasParams}} let {{constructorParams}} := {{copyConstructorArguments}}() {{/constructorHasParams}}
         {{implicitConstructor}}({{constructorParams}})
         {{/notLibrary}}
         {{deploy}}
