--- a/Obsidian_Runtime/src/main/yul_templates/object.mustache
+++ b/Obsidian_Runtime/src/main/yul_templates/object.mustache
@@ -33,7 +33,7 @@ object "{{creationObject}}" {
             {{#dispatch}}
                 {{! TODO BUG: forget to add implementation of shift_right_unsigned,
                     it simply returns shr(224, value) }}
-                let selector := shr(224,(calldataload(0))
+                let selector := shr(224, calldataload(0))
                 switch selector
                 {{#dispatchCase}}
                     case {{hash}} {
