adding support for boolean literals (#312)
* adding boolean literals per #306

* adding a test program for boolean literals

* this is the same bug in the mustache file noted in https://github.com/mcoblenz/Obsidian/commit/a4b87acf2d50af37733c6cadb4243d2a529f24ff #310

* bad parens in mustache file fix #310

* updating comment in mustache file

--- a/Obsidian_Runtime/src/main/yul_templates/object.mustache
+++ b/Obsidian_Runtime/src/main/yul_templates/object.mustache
@@ -31,9 +31,8 @@ object "{{creationObject}}" {
             {{memoryInitRuntime}}
             {{! obtain which runtime function is called, https://solidity.readthedocs.io/en/latest/abi-spec.html#function-selector}}
             {{#dispatch}}
-                {{! TODO BUG: forget to add implementation of shift_right_unsigned,
-                    it simply returns shr(224, value) }}
-                let selector := shift_right_unsigned(calldataload(0))
+                {{! TODO 224 is a magic number offset to shift to follow the spec above; check that it's right }}
+                let selector := shr(224, calldataload(0))
                 switch selector
                 {{#dispatchCase}}
                     case {{hash}} {
