scraps and notes to myself

--- a/Obsidian_Runtime/src/main/yul_templates/object.mustache
+++ b/Obsidian_Runtime/src/main/yul_templates/object.mustache
@@ -24,13 +24,12 @@ object "{{creationObject}}" {
         {{#deployFunctions}}
             {{code}}
         {{/deployFunctions}}
+        {{defaultReturn}}
     }
     object "{{runtimeObject}}" {
         code {
             {{! init free memory pointer, see chatper "Layout in Memory" of the Solidity doc}}
-            {{#memoryInitsRuntime}}
-                {{code}}
-            {{/memoryInitsRuntime}}
+            {{memoryInitRuntime}}
             {{! obtain which runtime function is called, https://solidity.readthedocs.io/en/latest/abi-spec.html#function-selector}}
             {{#dispatch}}
                 {{! TODO 224 is a magic number offset to shift to follow the spec above; check that it's right }}
@@ -45,6 +44,7 @@ object "{{creationObject}}" {
             {{#runtimeFunctions}}
                 {{code}}
             {{/runtimeFunctions}}
+            {{defaultReturn}}
         }
         {{runtimeSubObjects}}
     }
