improve ability to output yul from internal AST representation (#316)
* removing unused imports

* this will make the indentation a little better, but its not a real solution

* hacking on the mustache file and AST translation for #310

* end of day scraps and comments to myself for where to start Monday

* scraps and notes to myself

* adding assert false and first cut at outputting a default return; removing dead comments and latenight code that didnt compile

* default return, now not in AST form and at the bottom

* adding asserts before more unit values

* adding cases

* hoisting to a function

* type, adding a fully qualified name to satisfy the IDE

* scraps, comments, code hygine

* scraps, comments, code hygine

* scraps, comments, code hygine

* massaging whitespace

* fussing with syntax

* committing to overriding toString

* overriding some toStrings

* code hygine

* less manual toString for function calls

* new implementation of function strings seems good

* combinator for integer literals

* removing the code i pushed into the object structure

* noting a bug to fix in the future

* moving code around a little, working on comments

* finessing output for switch

* whitespace

* i may have deprecated this code; check tomorrow

* scraps, clean up before merging #315

* cleaning up todos and code quality for #315

* yulString object was dead code

* lifting repeated code, adjusting comments

* cleaning up assignment case

* removing repeated code

* removing repeated code

* removing needless tostring

* adding type annotations, removing needless parens, replacing iteration that misses cases with a map that works

* braces and parens

* a little more code clean up for #315

* string interpolation

--- a/Obsidian_Runtime/src/main/yul_templates/object.mustache
+++ b/Obsidian_Runtime/src/main/yul_templates/object.mustache
@@ -24,6 +24,7 @@ object "{{creationObject}}" {
         {{#deployFunctions}}
             {{code}}
         {{/deployFunctions}}
+        {{defaultReturn}}
     }
     object "{{runtimeObject}}" {
         code {
@@ -43,6 +44,7 @@ object "{{creationObject}}" {
             {{#runtimeFunctions}}
                 {{code}}
             {{/runtimeFunctions}}
+            {{defaultReturn}}
         }
         {{runtimeSubObjects}}
     }
