adding code copy

--- a/Obsidian_Runtime/src/main/yul_templates/object.mustache
+++ b/Obsidian_Runtime/src/main/yul_templates/object.mustache
@@ -24,6 +24,7 @@ object "{{creationObject}}" {
         {{#deployFunctions}}
             {{code}}
         {{/deployFunctions}}
+        {{codeCopy}}
         {{defaultReturn}}
     }
     object "{{runtimeObject}}" {
