addressing all the comments in the PR review except getting rid of the mapping i'm building for functions in favor of using the AST

--- a/Obsidian_Runtime/src/main/yul_templates/object.mustache
+++ b/Obsidian_Runtime/src/main/yul_templates/object.mustache
@@ -83,6 +83,8 @@ object "{{creationObject}}" {
                 mstore(pos, cleanup_t_uint256(value))
             }
 
+            {{! the "cleanup" functions enforce the invariants on the types from the abi wrt how they're encoded;
+                with uint256, there are none, so it just returns. }}
             function cleanup_t_uint256(value) -> cleaned {
                 cleaned := value
             }
