implementing returning expressions (#331)
* updating the test for #305

* adding cases for an exhaustive switch

* adding cases for an exhaustive switch

* end of day scraps, working on #305

* actual implementation of the hash for function names

* code style tweaks

* rename

* less hardecoded mapping from Obsidian to Yul types but it still needs work

* comment about outputting type annotations

* end of day scraps

* removing two big blocks of redundant code, neither of which was getting run

* removing possibly silly assertion

* pulling funcscope into its own file

* fixing selector case syntax

* removing an assertion about what functions can be called on that i think does not make sense

* comments and imports clean up

* adding some hard coded library functions to the mustache file, code to dispatch table

* adding json file so that travis will also run simple call as a test

* comment about boilerplate origin

* tightening up funcscope implementation

* callvalue check to util

* end of day scraps

* whitespace

* helper functions for binary and unary expressions; first crack at translating add, which led to #322

* function call sites, first real shot

* helper functions for binary and unary translations and the obvious translations with a couple of todos. stub of test case.

* scala style

* small changes to assignment

* adding other operations even though this does not work yet

* Adding back in a default case and some comments in the test file

* style and whitespace

* adding a todo noting repeated work so i dont forget. its a small optimization but an easy one

* further thoughts in a todo

* fixing a bug in less or equal and great or equal. its not the best fix but it will work for now

* removing some code that didn\'t pan out

* whitespace and scala style

* working on runtime object, missing ingredients in the deployed object

* moving memory initialization into the place 

--- a/Obsidian_Runtime/src/main/yul_templates/object.mustache
+++ b/Obsidian_Runtime/src/main/yul_templates/object.mustache
@@ -51,10 +51,7 @@ object "{{creationObject}}" {
             function abi_decode_tuple(headStart, dataEnd)   {
                 if slt(sub(dataEnd, headStart), 0) { revert(0, 0) }
             }
-
-            function abi_encode_tuple_to_fromStack(headStart ) -> tail {
-                tail := add(headStart, 0)
-            }
+            {{abiEncodeTupleFuncs}}
 
             function allocate_memory(size) -> memPtr {
                 memPtr := allocate_unbounded()
@@ -82,6 +79,15 @@ object "{{creationObject}}" {
                 result := and(add(value, 31), not(31))
             }
 
+            function abi_encode_t_uint256_to_t_uint256_fromStack(value, pos) {
+                mstore(pos, cleanup_t_uint256(value))
+            }
+
+            {{! the "cleanup" functions enforce the invariants on the types from the abi wrt how they're encoded;
+                with uint256, there are none, so it just returns. }}
+            function cleanup_t_uint256(value) -> cleaned {
+                cleaned := value
+            }
             {{#runtimeFunctions}}
                 {{code}}
             {{/runtimeFunctions}}
