--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -56,7 +56,7 @@
             <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item {% if current[1] == 'experiment.html' %} active {% endif %} }">
-            <a class="nav-link" href="experiment.html">User Study</a>
+            <a class="nav-link" href="experiment.html">User Studies</a>
           </li>
           <li class="nav-item {% if current[1] == 'publications.html' %} active {% endif %} }">
             <a class="nav-link" href="publications.html">Publications</a>
