adding code so that simple structure emits code that allocates some space; this is not testable right now until i also recursively generate code for sub objects and put it in the right place

--- a/Obsidian_Runtime/src/main/yul_templates/object.mustache
+++ b/Obsidian_Runtime/src/main/yul_templates/object.mustache
@@ -82,6 +82,12 @@ object "{{creationObject}}" {
                 mstore(pos, cleanup_t_uint256(value))
             }
 
+            function revert_forward_1() {
+                let pos := allocate_unbounded()
+                returndatacopy(pos, 0, returndatasize())
+                revert(pos, returndatasize())
+            }
+
             {{! the "cleanup" functions enforce the invariants on the types from the abi wrt how they're encoded;
                 with uint256, there are none, so it just returns. }}
             function cleanup_t_uint256(value) -> cleaned {
