adding a little bit to the boiler plate in mustache; updating the args to call in Invocation because i need to actually store the result in order for get() to work

--- a/Obsidian_Runtime/src/main/yul_templates/object.mustache
+++ b/Obsidian_Runtime/src/main/yul_templates/object.mustache
@@ -50,6 +50,12 @@ object "{{creationObject}}" {
             function abi_decode_tuple(headStart, dataEnd)   {
                 if slt(sub(dataEnd, headStart), 0) { revert(0, 0) }
             }
+
+            function abi_decode_t_uint256_fromMemory(offset, end) -> value {
+                value := mload(offset)
+            }
+
+
             {{abiEncodeTupleFuncs}}
 
             function allocate_memory(size) -> memPtr {
