--- a/Obsidian_Runtime/src/main/yul_templates/object.mustache
+++ b/Obsidian_Runtime/src/main/yul_templates/object.mustache
@@ -98,10 +98,16 @@ object "{{creationObject}}" {
             function cleanup_t_uint256(value) -> cleaned {
                 cleaned := value
             }
+            // top of runtime functions
             {{#runtimeFunctions}}
                 {{code}}
             {{/runtimeFunctions}}
+            // bottom of runtime functions
         }
+
+        // top of childObjects
+        {{childObjects}}
+        // bottom of childObjects
     }
 
     // top of subobjects
