simple structure types  (#364)
* adding simple setter-getter example for testing implementation of new

* using java -jar instead of sbt for running obsidian in the testing loop for ganache tests; trying to get travis to run tests in parallel

* second shot at travis parallel jobs

* third shot at travis parallel jobs

* small changes, another travis round

* debugging travis

* refining travis job

* refining travis job 3

* updating checks, travis job fussing 4

* removing SBT hack

* sbt hack seems to no longer be needed, so removing the commented out version

* trying jdk13 for laughs

* jdk 13 does not work and i do not want to fix it right now

* horsing around with changing what gets built when in each testing path

* taking a quick stab at moving the protobuf install out of the ganache tests to save a little more time

* updating travis yaml

* updating travis yaml

* updating travis yaml

* updating travis yaml

* updating travis

* working on travis build

* travis updates; removing npm audit that wasnt doing anything, taking a pass at conditional jobs

* fixing travis yaml syntax

* updating travis yaml and test scripts per comments on #346

* adding the optimize flag to the travis test script.

cleaning up directory tree. this was a test that i thought would fail but
doesnt, so it might as well get added to the suite to show that it doesnt.

* adding a json file for a test that uses multiple lines inside each block of an if. previously this failed because we allocted more than 16 stack variables; with the optimizer in the pipeline it now compiles all the way through and passes.

* adding code so that simple structure emits code that allocates some space; this is not testable right now until i also recursively generate code for sub objects and put it in the right place

* typo in test case

* typo in test case again

* scraps

* squelching an sbt warning about timestamps

* collect up the su

--- a/Obsidian_Runtime/src/main/yul_templates/object.mustache
+++ b/Obsidian_Runtime/src/main/yul_templates/object.mustache
@@ -27,7 +27,7 @@ object "{{creationObject}}" {
         {{codeCopy}}
         {{defaultReturn}}
     }
-    object "{{runtimeObject}}" {
+    object "{{runtimeObjectName}}" {
         code {
             {{! init free memory pointer, see chatper "Layout in Memory" of the Solidity doc}}
             {{memoryInitRuntime}}
@@ -50,6 +50,11 @@ object "{{creationObject}}" {
             function abi_decode_tuple(headStart, dataEnd)   {
                 if slt(sub(dataEnd, headStart), 0) { revert(0, 0) }
             }
+
+            function abi_decode_t_uint256_fromMemory(offset, end) -> value {
+                value := mload(offset)
+            }
+
             {{abiEncodeTupleFuncs}}
 
             function allocate_memory(size) -> memPtr {
@@ -82,16 +87,24 @@ object "{{creationObject}}" {
                 mstore(pos, cleanup_t_uint256(value))
             }
 
+            {{! revert, but also include the return data from the most recent call }}
+            function revert_forward_1() {
+                let pos := allocate_unbounded()
+                returndatacopy(pos, 0, returndatasize())
+                revert(pos, returndatasize())
+            }
+
             {{! the "cleanup" functions enforce the invariants on the types from the abi wrt how they're encoded;
                 with uint256, there are none, so it just returns. }}
             function cleanup_t_uint256(value) -> cleaned {
                 cleaned := value
             }
+
             {{#runtimeFunctions}}
                 {{code}}
             {{/runtimeFunctions}}
         }
-        {{runtimeSubObjects}}
+
+        {{childContracts}}
     }
-    {{subObjects}}
 }
