adding a temporary fix to the top of the dispatch table pending talking with MC"

--- a/Obsidian_Runtime/src/main/yul_templates/object.mustache
+++ b/Obsidian_Runtime/src/main/yul_templates/object.mustache
@@ -37,6 +37,7 @@ object "{{creationObject}}" {
             if iszero(lt(calldatasize(), 4)) {
                 {{#dispatch}}
                     {{! TODO 224 is a magic number offset to shift to follow the spec above; check that it's right }}
+                    let this := 0 // todo
                     let selector := shr(224, calldataload(0))
                     {{dispatchCase}}
                 {{/dispatch}}
