--- a/Obsidian_Runtime/src/main/yul_templates/object.mustache
+++ b/Obsidian_Runtime/src/main/yul_templates/object.mustache
@@ -88,7 +88,7 @@ object "{{contractName}}" {
             }
 
             {{#transactions}}
-                {{code}}
+                {{toString}}
             {{/transactions}}
         }
     }
