adding some todos and notes

--- a/Obsidian_Runtime/src/main/yul_templates/object.mustache
+++ b/Obsidian_Runtime/src/main/yul_templates/object.mustache
@@ -87,9 +87,7 @@ object "{{contractName}}" {
                 cleaned := value
             }
 
-            {{#transactions}}
-                {{toString}}
-            {{/transactions}}
+            {{transactions}}
         }
     }
 }
