allocate fields with pointers, rewrite yulobject and mustache interaction to reflect current object layout (#388)
* adding test case for nonprimitive fields in the main contract

* adding an ownership to the test field to make it valid obsidian

* removing some dead code

* removing unused childContracts argument from YulObject

* scraps

* new test

* fixing local util script for new version of solc, adding a little code for #389 but not a complete idea yet

* scraps

* rewriting yulobject to take an optional int to indicate the size of the main contract and if the contract being elaborated is the main one (if it has as size). this is temporary and not going to last

* removing what i am nearly positive is dead code

* first half of a big rewrite of the YulObject class

* back half of the refactor to update code generation

* adding some todos and notes

* scraps, scala style and whitespace

* scraps

* updating the implementation of switch toString to not print out invalid switches with no branches. this fixes the emptycontract dispatch table.

* scraps

* add the this argument uniformly in codegen not printing, and only remove it for the hashed dispatch table entries

* pulling the body of local invocation out into a helper so that it can get called in both places with different  arguments

* documentation, cleaning up todos

* scraps

* adding a little more documentation

--- a/Obsidian_Runtime/src/main/yul_templates/object.mustache
+++ b/Obsidian_Runtime/src/main/yul_templates/object.mustache
@@ -5,42 +5,28 @@ ethereum/solidity/libsolidity/codegen/ir/IRGenerator.cpp
 Consulting example yul code is also helpful in understanding the template.
 https://solidity.readthedocs.io/en/latest/yul.html#specification-of-yul-object
 }}
-object "{{creationObject}}" {
+object "{{contractName}}" {
     code {
         {{! init free memory pointer, see chatper "Layout in Memory" of the Solidity doc}}
         {{memoryInit}}
         {{! protection against sending Ether }}
         {{callValueCheck}}
-        {{! not impletmented by the current stage, cited from IRGenerator.cpp (link in file comment above) }}
-        {{#notLibrary}}
-            {{#constructorHasParams}} let {{constructorParams}} := {{copyConstructorArguments}}() {{/constructorHasParams}}
-            {{implicitConstructor}}({{constructorParams}})
-        {{/notLibrary}}
-        {{! todo: write and call constructor }}
-        {{#deploy}}
-            {{call}}
-        {{/deploy}}
-        {{! functions related to constructor }}
-        {{#deployFunctions}}
-            {{code}}
-        {{/deployFunctions}}
         {{codeCopy}}
         {{defaultReturn}}
     }
-    object "{{runtimeObjectName}}" {
+    object "{{deployedName}}" {
         code {
             {{! init free memory pointer, see chatper "Layout in Memory" of the Solidity doc}}
-            {{memoryInitRuntime}}
+            {{memoryInit}}
+
             {{! obtain which runtime function is called, https://solidity.readthedocs.io/en/latest/abi-spec.html#function-selector}}
 
             {{! todo: is 4 a magic number or should it be generated based on the object in question? check the ABI }}
             if iszero(lt(calldatasize(), 4)) {
-                {{#dispatch}}
-                    {{! TODO 224 is a magic number offset to shift to follow the spec above; check that it's right }}
-                    let this := address()
-                    let selector := shr(224, calldataload(0))
-                    {{dispatchCase}}
-                {{/dispatch}}
+                {{! TODO 224 is a magic number offset to shift to follow the spec above; check that it's right }}
+                let this := allocate_memory({{mainSize}})
+                let selector := shr(224, calldataload(0))
+                {{dispatchTable}}
             }
             if iszero(calldatasize()) {  }
             revert(0, 0)
@@ -101,11 +87,7 @@ object "{{creationObject}}" {
                 cleaned := value
             }
 
-            {{#runtimeFunctions}}
-                {{code}}
-            {{/runtimeFunctions}}
+            {{transactions}}
         }
-
-        {{childContracts}}
     }
 }
